<resources>
    <string name="app_name">Koby</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_logo">logo</string>
    <string name="benvenuto">Benvenuto in Koby</string>
    <string name="slogan" translatable="false">Your best Study Buddy</string>
    <string name="hintEmail">Indirizzo Email</string>
    <string name="hintPassword">Password</string>
    <string name="loginButton">Accedi</string>
    <string name="loginNoAccount">Non hai un account? Registrati</string>
    <string name="error_login_password_message">Credenziali Errate</string>
    <string name="error_login_user_message">Invalid User Error</string>
    <string name="unexpected_error">Errore Inaspettato</string>
    <string name="error_password">Errore Password</string>
    <string name="error_email">Errore Email</string>
    <string name="error_no_google_account_found_message">Nessun account Google collegato</string>
    <string name="check_login_data_message">controlla Login Data</string>
    <string name="login_success">Login effettuato</string>
    <string name="title_login">login</string>
    <string name="title_registration">registration</string>
    <string name="error_name">nome vuoto</string>
    <string name="error_password_mismatch">conferma password errata</string>
    <string name="registration_success">Registrazione avvenuta con successo</string>
    <string name="label_pick_pdf">Seleziona PDF</string>
    <string name="label_upload">Carica PDF</string>
    <string name="label_no_space">No spazio</string>
    <string name="label_add_space">Aggiungi SpaceStudy</string>
    <string name="label_add_space_long">Crea un nuovo Spazio Studio</string>
    <string name="menu_home">Home</string>
    <string name="new_chat_title">Titolo Chat</string>
    <string name="select_pdf">Seleziona PDF</string>
    <string name="title_newChat">Nuova Chat</string>
    <string name="new_chat">Nuova Chat</string>
    <string name="google_login">Login Google</string>
    <string name="register_button">Registrazione</string>
    <string name="go_to_login">Ritorna al login</string>
    <string name="hint_confirm_password">Conferma Psw</string>
    <string name="hint_name">Nome\n</string>
    <string name="register_title">Registrazione</string>
    <string name="createAccount">Crea un account</string>
    <string name="hintNomeCompleto">Nome completo</string>
    <string name="hintConfirmPassword">Conferma Password</string>
    <string name="hintRegister">Registrati</string>
    <string name="hintAlreadyHaveAccount">Hai già un account? Accedi</string>
    <string name="title_profile">Profilo</string>
    <string name="profile_picture">Foto profilo</string>
    <string name="label_language">Cambio lingua</string>
    <string name="label_theme">Tema scuro (in Beta)</string>
    <string name="logout">Esci</string>
    <string name="chat_hint">Scrivi un messaggio...</string>
    <string name="send">Invia</string>
    <string name="pick_pdf">seleziona PDF</string>
    <string name="pdf_attached">Il pdf è stato allegato correttamente</string>
    <string name="title_chat_detail">Dettaglio Chat</string>
    <string name="home_subtitle">Per creare una nuova chat</string>
    <string name="auth_error">Errore Autenticazione</string>
    <string name="error_confirm">Errore Conferma Password</string>
</resources>